# oop2021

./: Simple_problem.cpp  minheap.cpp
Danil Kirhetov/: Kirhetov exam.cpp  Кіргетов DSU.pptx
Danil Kirhetov/7 Roman Numerals/: main.cpp
Danil Kirhetov/Lucky tickets/: bigint.cpp  combine.cpp  halfmod.cpp  rectangles.cpp  simpson.cpp  trap.cpp  trapezoids.cpp
Kshyvanskyi/: a.out
Kshyvanskyi/elymp problems/: Simple_problem.cpp  Two_circles.cpp
Kshyvanskyi/exam/: BFS.cpp  template.cpp
Kshyvanskyi/tasks/: Inheritance.cpp  Interface.h  Template.cpp
lavoryk/: graph2.cpp  hash1.cpp  map1.cpp  template.cpp  two_circle.cpp  virt1.cpp
lavoryk/exam-oop/: BFS.cpp  template-ex.cpp
lavoryk/to-exam/: interf1.cpp  overload1.cpp  person.cpp
maslova/: DFS.cpp  Lines.cpp  Problem3967.cpp  Stack.cpp  Stack_Template.cpp  interface.cpp  vouchers.cpp
n.melikidze/: .main.cpp.swp
n.melikidze/LCSS/: CMakeLists.txt  Config.h.in  main.cpp
n.melikidze/Mountain_routes/: main.cpp
o.skorenok/: two_circles.cpp  wormholes.cpp
o.skorenok/BinPow/: binpow.cpp
o.skorenok/ListDS/: ArrayList.h  LinkedList.h
o.skorenok/Tasks/: inheritance.cpp  interface.h  template.cpp
o.skorenok/e-olymp/: two_circles.cpp
prudiev/: eolymp2.cpp  interface.cpp
prudiev/e-olymp #2/: eolymp2.cpp
prudiev/e-olymp #4002 (Module1)/: Source.cpp
prudiev/presentation1/: maxheap.cpp
prudiev/presentation2/: LCS.pptx  lcs.cpp
prudiev/simple template class/: Source.cpp
r.iermolenko/: list_of_presentations.txt
r.iermolenko/lection_tasks/: G4IonTable.cc  G4Ions.cc  G4Ions.hh  G4VIsotopeTable.hh  (+5 more)
(+35 files in other folders)
